--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "semi": true,
+  "printWidth": 79,
+  "tabWidth": 2,
+  "useTabs": true,
+  "endOfLine": "auto",
+  "arrowParens": "always"
 }
