--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "schedule-svc",
+  "name": "almond-schedule",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "gRPC microservice back-end for schedules.",
+  "author": "Francis Masha <francismasha96@gmail.com>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
+  "packageManager": "yarn@3.2.0",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -19,38 +20,79 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "generate:typings": "ts-node ./src/graphql/generate-typings",
+    "copy:protos": "cpy ../../_proto ./src",
+    "migrate": "ts-node migrate.ts",
+    "clear-all": "rimraf ./.cache ./dist",
+    "db:up": "echo creating && yarn db:create && echo created && yarn db:migrate && echo migrated",
+    "db:reset": "yarn db:drop && yarn db:up",
+    "db:create": "sequelize db:create",
+    "db:drop": "[[ $NODE_ENV == production ]] && exit 1 || sequelize db:drop",
+    "db:migrate": "sequelize db:migrate",
+    "db:rollback": "sequelize db:migrate:undo",
+    "db:rollback:all": "sequelize db:migrate:undo:all",
+    "db:seed:all": "sequelize db:seed:all",
+    "db:seed:rollback": "sequelize db:seed:undo:all"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@grpc/grpc-js": "^1.6.7",
+    "@grpc/proto-loader": "^0.6.12",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/microservices": "^8.4.4",
+    "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/schedule": "^1.1.0",
+    "@nestjs/sequelize": "^8.0.0",
+    "aigle": "^1.14.1",
+    "bluebird": "^3.7.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "dotenv": "^16.0.1",
+    "nestjs-pino": "^2.5.2",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "pg-native": "^3.0.0",
+    "pino": "^7.11.0",
+    "pino-http": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.5.5",
+    "sequelize": "^6.19.0",
+    "sequelize-cursor-pagination": "^2.3.0",
+    "sequelize-typescript": "^2.1.3",
+    "umzug": "^3.1.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^8.2.5",
+    "@nestjs/schematics": "^8.0.11",
+    "@nestjs/testing": "^8.4.4",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/jest": "27.5.1",
+    "@types/node": "^17.0.32",
+    "@types/sequelize": "^4.28.13",
+    "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "cpy-cli": "^4.1.0",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "jest": "^28.1.0",
+    "jest-extended": "^2.0.0",
+    "pino-pretty": "^7.6.1",
+    "prettier": "^2.6.2",
+    "sequelize-cli": "^6.4.1",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.2",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^4.0.0",
+    "typescript": "^4.6.4"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -68,6 +110,5 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  },
-  "packageManager": "yarn@3.2.0"
+  }
 }
