--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Francis Masha <francismasha96@gmail.com>",
   "private": true,
   "license": "MIT",
-  "packageManager": "yarn@3.2.0",
+  "packageManager": "yarn@3.2.1",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -38,61 +38,63 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.6.7",
     "@grpc/proto-loader": "^0.6.12",
-    "@nestjs/common": "^8.4.4",
-    "@nestjs/config": "^2.0.0",
-    "@nestjs/core": "^8.4.4",
-    "@nestjs/microservices": "^8.4.4",
-    "@nestjs/platform-express": "^8.4.4",
-    "@nestjs/schedule": "^1.1.0",
+    "@nestjs/common": "^8.4.6",
+    "@nestjs/config": "^2.1.0",
+    "@nestjs/core": "^8.4.6",
+    "@nestjs/microservices": "^8.4.6",
+    "@nestjs/platform-express": "^8.4.6",
+    "@nestjs/schedule": "^2.0.1",
     "@nestjs/sequelize": "^8.0.0",
     "aigle": "^1.14.1",
     "bluebird": "^3.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
-    "nestjs-pino": "^2.5.2",
+    "nestjs-pino": "^2.6.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "pg-native": "^3.0.0",
-    "pino": "^7.11.0",
-    "pino-http": "^7.0.0",
+    "pino": "^8.0.0",
+    "pino-http": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
-    "sequelize": "^6.19.0",
-    "sequelize-cursor-pagination": "^2.3.0",
+    "sequelize": "^6.20.1",
+    "sequelize-cursor-pagination": "^2.4.0",
     "sequelize-typescript": "^2.1.3",
     "umzug": "^3.1.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.5",
+    "@nestjs/cli": "^8.2.6",
     "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^8.4.4",
+    "@nestjs/testing": "^8.4.6",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.5.1",
-    "@types/node": "^17.0.32",
+    "@types/jest": "28.1.0",
+    "@types/node": "^17.0.38",
     "@types/sequelize": "^4.28.13",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.2",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "cpy-cli": "^4.1.0",
-    "eslint": "^8.15.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "import-sort-style-module": "^6.0.0",
     "jest": "^28.1.0",
     "jest-extended": "^2.0.0",
-    "pino-pretty": "^7.6.1",
+    "pino-pretty": "^8.0.0",
     "prettier": "^2.6.2",
+    "prettier-plugin-import-sort": "^0.0.7",
     "sequelize-cli": "^6.4.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.3",
-    "ts-jest": "^28.0.2",
+    "ts-jest": "^28.0.3",
     "ts-loader": "^9.3.0",
-    "ts-node": "^10.7.0",
+    "ts-node": "^10.8.0",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -110,5 +112,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "style": "module",
+      "parser": "typescript"
+    }
   }
 }
